--- a/101.md
+++ b/101.md
@@ -1,2 +1,164 @@
+# 教学环境介绍
+暂时先略过
+- desktop
+- server
+- classroom
+
 # shell
-## where is a shell, there's a way
+## Where there is a shell，there is a way!
+上面这句话大体意思是"哪里有shell, 哪里就有方法""\
+<br>
+很多时候,看似极为复杂的一系列操作, 例如用鼠标点击依次点击几个按钮,再键入相应信息, 并最终保存.
+<br>最终还是在shell中就一条命令就搞定了.
+
+好吧,又到了说文解字的时候了, shell字面意义是外壳的意思, 之所以有外壳,是因为对于操作系统内核来说的.
+<br>
+我们看下面命令
+查看系统内核
+```bash
+k@t530:~$ uname -r
+4.15.0-45-generic
+```
+平时我们用到的`ubuntu`,`redhad`,`suse`等都是基于内核再加上一系列的外围软件,而成的发行版本.
+如我现在所用的就是ubuntu
+```bash
+k@t530:~$ cat /etc/issue
+Ubuntu 18.04.1 LTS \n \l
+```
+
+现在所用的shell就是bash
+
+```bash
+k@t530:~$ echo $SHELL
+/bin/bash
+k@t530:~$ 
+```
+
+## 常用命令演示
+此处需要演于一些常用命令如ls等,
+
+```bash
+ k@t530:~$ ls
+ bin  'Calibre Library'   code   Desktop   Documents   Downloads   ide   local   Music   nohup.out   Pictures   Public   PycharmProjects   Templates   tmp   ubuntu   Videos
+k@t530:~$ cd code
+k@t530:~/code$ ls
+c
+k@t530:~/code$ pwd
+/home/k/code
+k@t530:~/code$ cd ..
+k@t530:~$ pwd
+/home/k
+```
+也可以故意演于一些错误的输入
+
+```bash
+k@t530:~$ lasdfklajdsf
+lasdfklajdsf: command not found
+```
+## 提示符的一些说明
+
+### $#区别身份
+其中之前的`k@t530:~/code$`有几部分组成
+一般用户以 `$` 结尾
+而root用户(特权用户) 以#号结尾
+如下面所示最后一行所示
+
+```bash
+k@t530:~/code$ su - 
+Password: 
+root@t530:~# 
+```
+
+如果再详细地查看,无论是`$`或`#`都只是`环境变量` `PS1`的一部分,
+如刚才的例子,
+```bash
+root@t530:~# echo $PS1
+\[\e]0;\u@\h: \w\a\]${debian_chroot:+($debian_chroot)}\u@\h:\w\$
+```
+更多的说明可参考[https://linux.cn/article-8711-1.html](https://linux.cn/article-8711-1.html)
+
+
+### 最小权力原则
+看来说来说去都绕开不历史, 在很久很久以前..由于PC还没有普及.所以一台机器是同时被多个人使用的,
+<br>
+而作为大多数人,一般来说只是普通用户,只有系统管理员才有特权的root用户
+<br>
+当然, 还是能那话,权力越大, 能对系统产生的破坏也就越大,
+<br>现在机器资源相对比之前多了不少,
+<br>但理论上作为一个及格的体系统管理员, 平时操作时, 也建议尽可能少地避免使用root, 
+<br>尽可能遵守`最小权力原则`这样的运维才会更安全, 
+<br>也是精细化运维的一个体现.
+<br> 当然凡事也有一个例外, 就是sudo,如不想转到根, 有时也偶然用到相应权限, 就在那些需要用到的命令前加入sudo,当然前提你是有用sudo的资格(/etc/sudoers)
+
+### 红色的提示符
+所以有些线上的系统就把root的提示符颜色设为红色以作警示
+
+
+## 关于登陆说明
+说明装一点, 就是一个鉴权,也就是,证明你是你,还是那个历史的说法, 
+<br>在很久很久以前, 我们没有(或者说不能普及)指纹,虹膜,声纹,步态等一系列关于你的生物特征值,去证明你是你.
+于是就采用了用户名加密码这种土办法去证明你是你....
+此时可以演示一下用shell的登陆操作.(结合RH124 p13的practice)
+
+### passwd
+- 由于要用到用户名及密码,就涉及到上面这个改用户名密码的命令, 
+- 也涉及到密码强度, 密码有效期等一系列知识点.
+- 可参考(p15 讲一下/etc/passwd文件, 有空也可以讲讲shadow,加密等)
+
+### 此处可以视具体情况看是否需要展开 
+
+## 登出
+有入有出才是正常的
+平时我们登出(或叫退出)
+一般键入
+`exit`
+或按`ctrl+d`即可
+当然,一般来说也可以设置一个多久空闲没所事事,就踢出的操作.
+好久以前, 实习的时候, 就试过不然登入,之后没有正期登出,最后系统会话爆了,登不了,,好像是一个叫`SCO`的系统,
+太久远了, 当时我只是一个普通用户, 原因就更不可考了.
+
+### w,who等命令可以看一下有谁还在系统上面
+
+
+## 加快我们的操作
+
+### 结合P16计一下补全
+- 命令补全
+- 选项补全
+- 参数补全
+
+此处如有空, 可以计一下一个命令由命令本体, 选项(option), 参数(argument)等几项构成,(p3)
+顺序其实最好固定, 那样有利于在运维时,遇到紧急状况时, 减少出错的机率.
+
+当然,再有空也可以补一下对于选项加一个减号, 还是两个减号的风格之争.
+(建议, 平时建入, 能省则省,写脚本的, 如一些不太常用的, 就用全名, 增强可读性)
+
+### 结合P17计一下历史命令的使用
+- history可以查看之前键入过的命令, 查完后可以用!接序号去加快执行,
+- vi(set -o vi) 用/可以把之前用过的命令匹配搜出来, 也可以加入操作, 用j,k这样也可以上下找用过的上一条命令
+- emacs(defulat)(set -o emacs) 用 crtl+r来匹配之前用过的命令, ctrl+n, ctrl+p去上下找用过的命令
+- 当然,也可以用上下箭头去找上下的命令,(有时tty的设置会使这种办法失效)
+- 对于用!!重复上一条命令
+演于
+```bash
+k@t530:~/code$ ls
+c
+k@t530:~/code$ !!
+ls
+c
+```
+对于由于是普通用户执行了需要特权才能执行的命令, 可以用`sudo !!`
+```bash
+cat: /etc/shadow: Permission denied
+k@t530:~/code$ sudo !!
+sudo cat /etc/shadow
+[sudo] password for k: 
+daemon:*:17737:0:99999:7:::
+bin:*:17737:0:99999:7:::
+...
+gdm:*:17737:0:99999:7:::
+...
+libvirt-qemu:!:17942:0:99999:7:::
+libvirt-dnsmasq:!:17942:0:99999:7:::
+k@t530:~/code$ 
+```
