--- a/101.md
+++ b/101.md
@@ -5,7 +5,7 @@
 - classroom
 
 # shell
-## Where there is a shell，there is a way!
+## Where is a shell，there is a way!
 上面这句话大体意思是"哪里有shell, 哪里就有方法""\
 <br>
 很多时候,看似极为复杂的一系列操作, 例如用鼠标点击依次点击几个按钮,再键入相应信息, 并最终保存.
@@ -19,7 +19,7 @@
 k@t530:~$ uname -r
 4.15.0-45-generic
 ```
-平时我们用到的`ubuntu`,`redhad`,`suse`等都是基于内核再加上一系列的外围软件,而成的发行版本.
+平时我们用到的`ubuntu`,`redhad`,`suse`, `kali`, `arch`, `gentoo`等都是基于内核再加上一系列的外围软件,而成的发行版本.
 如我现在所用的就是ubuntu
 ```bash
 k@t530:~$ cat /etc/issue
@@ -77,6 +77,7 @@ root@t530:~# echo $PS1
 ```
 更多的说明可参考[https://linux.cn/article-8711-1.html](https://linux.cn/article-8711-1.html)
 
+??环境变量是否需要解释一下??
 
 ### 最小权力原则
 看来说来说去都绕开不历史, 在很久很久以前..由于PC还没有普及.所以一台机器是同时被多个人使用的,
@@ -85,10 +86,12 @@ root@t530:~# echo $PS1
 <br>
 当然, 还是能那话,权力越大, 能对系统产生的破坏也就越大,
 <br>现在机器资源相对比之前多了不少,
-<br>但理论上作为一个及格的体系统管理员, 平时操作时, 也建议尽可能少地避免使用root, 
+<br>但理论上作为一个及格的系统管理员, 平时操作时, 也建议尽可能少地避免使用root, 
 <br>尽可能遵守`最小权力原则`这样的运维才会更安全, 
 <br>也是精细化运维的一个体现.
 <br> 当然凡事也有一个例外, 就是sudo,如不想转到根, 有时也偶然用到相应权限, 就在那些需要用到的命令前加入sudo,当然前提你是有用sudo的资格(/etc/sudoers)
+
+??是否可以联想下`最小系统法`??
 
 ### 红色的提示符
 所以有些线上的系统就把root的提示符颜色设为红色以作警示
