add the vim part

--- a/101.md
+++ b/101.md
@@ -4,6 +4,20 @@
 - server
 - classroom
 
+# 除了教材之外的补充读物
+## administrator guide
+rhel7有自己的产品文档,如有时看考试教材真是看不下去可以看看官方的`系统管理员指南`作为补充
+- [网页版](https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/html/system_administrators_guide/index)
+- [pdf](https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/pdf/system_administrators_guide/Red_Hat_Enterprise_Linux-7-System_Administrators_Guide-en-US.pdf)
+
+## [其它](https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/7/)
+这个链接是一个总的索引, 如系统管理看完后,仍有余力, 可从
+- `Networking Guide`, 
+- `Kernel Administration Guide`,
+- `Performance Tuning Guide`
+- ...
+各方面都有,估计一时看不完(反正我是没看完), 倒是可以在日常工作中可以作为资料查阅一下
+
 # shell
 ## Where is a shell，there is a way!
 上面这句话大体意思是"哪里有shell, 哪里就有方法""\
@@ -165,3 +179,122 @@ libvirt-qemu:!:17942:0:99999:7:::
 libvirt-dnsmasq:!:17942:0:99999:7:::
 k@t530:~/code$ 
 ```
+
+# adust the sequence
+
+# add the `screen`
+
+演示screen不同人员同屏操作
+- 如一些对环境不排它的, 可以多个学员同时登到我的机器上, 我这边多开几个窗, 不同学员对号入坐, 我这边也方便一一跟踪.
+- 到后期一系列排它性操作, 如给系统挂盘等操作等, 则让学员开screen 窗,我用screen -x登到学员机器上进行同步操作.
+- 类似的分屏多终端模拟软件有`tmux`,及另外一些集成的.
+
+# add the vim 
+
+## 教材中涉及vim的相关章节
+
+总的来说, 三本教材涉及到vim的章节不多, 就本着够用原则, 
+- 124,ch4中先简要介绍了一下vim怎样打开文件, 基本移动, 退出,也就是一些最基本的vim生存技能.
+- 134,ch3中倒是就作为系统管理员平时一大使用场景中进行了归纳出一系列的操作.
+
+理论上应可以一起教学
+
+- 其中124 ch4 中让我们读完vimtotur中的第一课各小节即可, 但我想如果大家对英文读起来比较吃力的话, 可以把书中的命令加个参数`zh`
+
+```
+vimtotur zh
+===============================================================================
+=      欢     迎     阅     读   《 V I M  教  程 》   ——      版本 1.7       =
+===============================================================================
+
+     Vim 是一个具有很多命令的功能非常强大的编辑器。限于篇幅，在本教程当中
+     就不详细介绍了。本教程的设计目标是讲述一些必要的基本命令，而掌握好这
+     些命令，您就能够很容易地将 Vim 当作一个通用编辑器来使用了。
+
+     完成本教程的内容大约需要25-30分钟，取决于您训练的时间。
+
+     注意：
+     每一节的命令操作将会更改本文。推荐您复制本文的一个副本，然后在副本上
+     进行训练(如果您是通过"vimtutor"来启动教程的，那么本文就已经是副本了)。
+
+     切记一点：本教程的设计思路是在使用中进行学习的。也就是说，您需要通过
+     执行命令来学习它们本身的正确用法。如果您只是阅读而不操作，那么您可能
+     会很快遗忘这些命令的！
+
+     好了，现在请确定您的Shift-Lock(大小写锁定键)还没有按下，然后按键盘上
+     的字母键 j 足够多次来移动光标，直到第一节的内容能够完全充满屏幕。
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+                        第一讲第一节：移动光标
+
+
+             ** 要移动光标，请依照说明分别按下 h、j、k、l 键。 **
+
+             ^
+             k              提示： h 的键位于左边，每次按下就会向左移动。
+       < h       l >               l 的键位于右边，每次按下就会向右移动。
+             j                     j 键看起来很象一支尖端方向朝下的箭头。
+             v
+
+...
+
+```
+就可以在中文版中进行vim练习, 希望能有所降低学习曲线,,,什么?又让你错失了学习英文的机会?
+好吧.你也可以在vim的命令行模式中键入help让你一次学过够...
+
+```
+help.txt        For Vim version 7.4.  Last change: 2012 Dec 06
+
+                        VIM - main help file
+                                                                         k
+      Move around:  Use the cursor keys, or "h" to go left,            h   l
+                    "j" to go down, "k" to go up, "l" to go right.       j
+Close this window:  Use ":q<Enter>".
+   Get out of Vim:  Use ":qa!<Enter>" (careful, all changes are lost!).
+
+Jump to a subject:  Position the cursor on a tag (e.g. bars) and hit CTRL-].
+   With the mouse:  ":set mouse=a" to enable the mouse (in xterm or GUI).
+                    Double-click the left mouse button on a tag, e.g. bars.
+        Jump back:  Type CTRL-T or CTRL-O (repeat to go further back).
+
+Get specific help:  It is possible to go directly to whatever you want help
+                    on, by giving an argument to the :help command.
+                    It is possible to further specify the context:
+                                                        help-context
+                          WHAT                  PREPEND    EXAMPLE
+                      Normal mode command      (nothing)   :help x
+                      Visual mode command         v_       :help v_u
+                      Insert mode command         i_       :help i_<Esc>
+                      Command-line command        :        :help :quit
+                      Command-line editing        c_       :help c_<Del>
+                      Vim command argument        -        :help -r
+                      Option                      '        :help 'textwidth'
+help.txt [Help][RO]                 
+-----------
+~
+~
+~
+~
+~
+:h
+```
+## 键位图
+有句话说过, 一个表格胜过千字, 一个图胜过N个表格,,,,于是在当令的读图时代, 有也不少人喜欢直接看图读话
+下面这个是`键位图`
+![](./res/vi-vim-cheat-sheet.gif)
+
+但是如果你觉得一次学太多太有压力了, 那么也可以看一下这个`简明版`,,是不是会好一点,,,先把基本的学会了吧<br>
+[vi / vim 简明学习指南](https://segmentfault.com/a/1190000000435283)
+![](./res/vim-basic.gif)
+
+## vim控
+
+其实很多会成瘾的东西一开始还是会让人稍稍不适,,如烟, 辣, 咖啡等, vim由于学习曲线较高(比起window的notepad记事本来说), 
+所以也可能会让你一开始有点无所适从, 如一但习惯了, 可能就会成控, 我就是一个
+- chorome 
+- envice
+- 各编辑器的vim插件
+
+
+
+
