add the classroom env

--- a/101.md
+++ b/101.md
@@ -1,9 +1,25 @@
 # 教学环境介绍
-暂时先略过
+(看是否需要先略过, 暂时先略过)
 - desktop
 - server
 - classroom
 
+|Machine name|IP addresses|Role|
+|:---|:---|:---|
+|desktopX.example.com|172.25.X.10| Student "client" computer|
+|serverX.example.com|172.25.X.11| Student "server" computer|
+|classroom.example.com|172.25.254.254 |Classroom utility server|
+
+
+rht-vmctl Commands
+
+|Action|Command|
+|---|----|
+|Start server machine |rht-vmctl start server|
+|View " physical console" to login and work with server machine |rht-vmctl view server|
+|Reset server machine to its previous state and restart virtual machine| rht-vmctl reset server|
+
+rht-vmctl view 这个有点慢,, 真正考试的话, 可以用`ssh -X student@172.25.0.10`登陆后直接把需要的图型界面弄出来, 理论上会快一点点.
 # 除了教材之外的补充读物
 ## administrator guide
 rhel7有自己的产品文档,如有时看考试教材真是看不下去可以看看官方的`系统管理员指南`作为补充
