加入Day03-04课后作业

--- a/Homework/1660_20190223.md
+++ b/Homework/1660_20190223.md
@@ -37,3 +37,49 @@ Natasha，harry，sarah密码都是abc123!@#
 ## 操作型课后作业
 vimtutor zh
 进去练习, 至少完成lesson2,
+
+
+# Day03-04
+
+查看下面的操作,解释一下怎样设置能达到这种效果.
+(提示,答案并不唯一,请多想像,最后给出设置(需要分别在foundation0, 及desktop都要设置))
+````bash
+[kiosk@foundation0 ~]$ godesk
+Last login: Fri Mar  1 01:35:11 2019 from 172.25.0.250
+[student@desktop0 ~]$ sudo yum install -y vsftpd
+Loaded plugins: langpacks
+Resolving Dependencies
+--> Running transaction check
+---> Package vsftpd.x86_64 0:3.0.2-9.el7 will be installed
+--> Finished Dependency Resolution
+
+Dependencies Resolved
+
+=================================================================================
+ Package         Arch            Version                 Repository         Size
+=================================================================================
+Installing:
+ vsftpd          x86_64          3.0.2-9.el7             rhel_dvd          166 k
+
+Transaction Summary
+=================================================================================
+Install  1 Package
+
+Total download size: 166 k
+Installed size: 343 k
+Downloading packages:
+vsftpd-3.0.2-9.el7.x86_64.rpm                             | 166 kB  00:00:00
+Running transaction check
+Running transaction test
+Transaction test succeeded
+Running transaction
+  Installing : vsftpd-3.0.2-9.el7.x86_64                                     1/1
+  Verifying  : vsftpd-3.0.2-9.el7.x86_64                                     1/1
+
+Installed:
+  vsftpd.x86_64 0:3.0.2-9.el7
+
+Complete!
+[student@desktop0 ~]$
+
+````
