--- a/Homework/1660_20190223.md
+++ b/Homework/1660_20190223.md
@@ -84,3 +84,13 @@ Complete!
 [student@desktop0 ~]$
 
 ````
+
+# Day05-Day06
+<由于之前有同学反馈之前的题目太长,也看不懂, 因此来了一些<br>
+开放式题目,建议大家进行搜索,以拓宽解题的思路>
+
+## 05
+crontab 这个定时作业任务只能精确到分钟,如果我们需要按秒的精度应怎样进行?
+
+## 06
+有什么方法让root也不能把文件删除
