加入放正心态等

--- a/101.md
+++ b/101.md
@@ -1,3 +1,41 @@
+# 心态请放正
+
+## 首先认清楚我们这个班的定位(0基础)
+闻道有先后, 术业有专攻, 我们对linux的认识水平自然有高有低.<br>
+因此在座的同学,有之前还没有接触linux的"小白",<br>
+也有可能有大神级别的同学,过来只是混个证的,水平自然在我之上,如我哪里讲得有偏差, 请您指出, 让我收获知识的同时,也避免继续误人子弟.<br>
+因此为了避免给零基础的同学太大压力, 与教务方面协商的结果是0基础开始来玩,有基础的, 或大神级请给点耐心.^_^
+
+## 对于重听的同学
+可能会让你们有点失望,怎么又双叕是你这张老脸...<br>
+我可以厚顔无耻地说, 这可能也是缘分....<br>
+正如刚才我所说的, 我们的起点是不一样的,之前与你们一起学习并顺利通过考试的同学,<br>
+说不定也是上上期重听的呢.<br>
+又或者别人来之前就工作多年, 来这边只是总结下所学知识,顺便不小心就考了个证,仅此而己<br>
+再或者说, 上期来时同为小白,但现在别人拿证了, 可能别人偷偷比你更用功,投入的时间比你多得多,而装着什么都没干的样子吧<br>
+
+什么,,都不是..明明就是比你懒,只是顔值比你高,就通过了...好吧...我编不下去了...<br>
+
+我记得我是这样安慰我自己的, 实话实说红帽这套教程124,这书的作为linux的基础入门,还是相对合理,如果一开始就学这个理论上是少走了不少弯路,<br>
+希望我这个课程也像那些非线性斜事的电影一样,(那种一开始看不懂, 有点烧脑的),你二刷时, 也有新的收获...<br>
+
+差点忘了, 可以的话,,不要剧透,,,虽然我尽可能求变,,,可是教学大纲摆在那的...<br>
+当然也希望这次是我们最后一起学习这个课程.(有点小感伤...)
+
+------------------无敌分割线-----------------
+# 关于REHL7,还是RHEL8
+是的,,当我们还讨论着7比6变化了很多很多的时候, 8就已出来,,,<br>
+那估计8的相关认证也不会晚了,,<br>
+的确,这个世界就是这样逼着我们前行......<br>
+but,,,但是,收到红帽(我们一般称原厂)消息, 最快也要年底,或明年初才会变成8,(因为教材翻译需要时间...这种翻译质量还这么慢..唉...吐槽一下
+可以的话, 我们平时看中文也要看一下英文的教材...不然有时会不知所云)
+也就是最近这段时间还是7.....所以.........你懂的...(自己想像)
+
+
+# 红帽的logo变化了
+是的,,,,logo变 得"不要脸"了<br>
+ [红帽公司换了 Logo](https://www.qdaily.com/articles/63705.html)
+
 # 教学环境介绍
 (看是否需要先略过, 暂时先略过)
 - desktop
