--- a/Homework/1704_20190521.md
+++ b/Homework/1704_20190521.md
@@ -24,3 +24,12 @@ vimtutor zh
 监控和管理linux进程
 同样把最后的脚本评估结果发群上
 
+
+# day03-04
+
+## 验证telnet协议的不安全
+打开telnet服务,用telnet进行远程登陆,中间用tcpdump抓包<br>
+再用wireshark打开, 查看一下是不是可以看到你刚才键入的字符,没有加密的,明文<br>
+
+
+## 用putty的一套工具实现ssh登陆, 免密登陆,免密用加密的钥登陆
