补充lvm相关知识

--- a/Homework/1704_20190521.md
+++ b/Homework/1704_20190521.md
@@ -31,5 +31,10 @@ vimtutor zh
 打开telnet服务,用telnet进行远程登陆,中间用tcpdump抓包<br>
 再用wireshark打开, 查看一下是不是可以看到你刚才键入的字符,没有加密的,明文<br>
 
-
+在
 ## 用putty的一套工具实现ssh登陆, 免密登陆,免密用加密的钥登陆
+
+
+# day07-08
+## 课本上只介绍了如保动态云扩展硬盘空间, 如果反过来要缩小空间,应如何操作?
+## 课本上挂samba上都是在我们的linux之间, 试一下用samba云访问真正windows上面的主机
